--- a/css/screen.css
+++ b/css/screen.css
@@ -6,14 +6,14 @@
     font-family: "HK Grotesk Web";
     font-weight: 200;
     src: url("../fonts/hkgrotesk-light-webfont.woff") format("woff"),
-         url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2");
+        url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2");
 }
 
 @font-face {
     font-family: "HK Grotesk Web";
     font-weight: 400;
     src: url("../fonts/hkgrotesk-regular-webfont.woff") format("woff"),
-         url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2");
+        url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2");
 }
 
 /*------------------------------------*\
@@ -195,6 +195,12 @@ a:focus {
     padding: 48px 24px 24px;
 }
 
+/* color modifiers */
+
+.o-row—neutral-x-light {
+    background: #F7F7F7;
+}
+
 @media (min-width: 768px) {
     .o-row {
         padding-left: 48px;
@@ -222,7 +228,8 @@ a:focus {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    max-width: 56.4em; /* 56.4 * 20px = 1128px */
+    max-width: 56.4em;
+    /* 56.4 * 20px = 1128px */
 }
 
 /*
@@ -240,9 +247,9 @@ a:focus {
     flex-wrap: wrap;
 }
 
-    .o-layout__item {
-        flex-basis: 100%;
-    }
+.o-layout__item {
+    flex-basis: 100%;
+}
 
 /* gutter modifiers, these affect o-layout__item too */
 
@@ -250,7 +257,7 @@ a:focus {
     margin: 0 -12px;
 }
 
-.o-layout--gutter > .o-layout__item {
+.o-layout--gutter>.o-layout__item {
     padding: 0 12px;
 }
 
@@ -258,7 +265,7 @@ a:focus {
     margin: 0 -6px;
 }
 
-.o-layout--gutter-sm > .o-layout__item {
+.o-layout--gutter-sm>.o-layout__item {
     padding: 0 6px;
 }
 
@@ -266,7 +273,7 @@ a:focus {
     margin: 0 -24px;
 }
 
-.o-layout--gutter-lg > .o-layout__item {
+.o-layout--gutter-lg>.o-layout__item {
     padding: 0 24px;
 }
 
@@ -348,7 +355,7 @@ a:focus {
     Creates vertical whitespace between adjacent sections inside a row
 */
 
-* + h2 {
+*+h2 {
     margin-top: 48px;
 }
 
@@ -356,19 +363,20 @@ a:focus {
     display: flow-root;
 }
 
-.o-section + .o-section {
+.o-section+.o-section {
     margin-top: 24px;
 }
 
 @media (min-width: 768px) {
-    .o-section--lg + .o-section--lg,
-    .o-section--xl + .o-section--xl {
+
+    .o-section--lg+.o-section--lg,
+    .o-section--xl+.o-section--xl {
         margin-top: 48px;
     }
 }
 
 @media (min-width: 1200px) {
-    .o-section--xl + .o-section--xl {
+    .o-section--xl+.o-section--xl {
         margin-top: 72px;
     }
 }
@@ -586,33 +594,43 @@ a:focus {
     .u-1-of-2-bp1 {
         flex-basis: calc(100% / 2) !important;
     }
+
     .u-1-of-3-bp1 {
         flex-basis: calc(100% / 3) !important;
     }
+
     .u-2-of-3-bp1 {
         flex-basis: calc(100% / 3 * 2) !important;
     }
+
     .u-1-of-4-bp1 {
         flex-basis: calc(100% / 4) !important;
     }
+
     .u-3-of-4-bp1 {
         flex-basis: calc(100% / 4 * 3) !important;
     }
+
     .u-1-of-5-bp1 {
         flex-basis: calc(100% / 5) !important;
     }
+
     .u-2-of-5-bp1 {
         flex-basis: calc(100% / 5 * 2) !important;
     }
+
     .u-3-of-5-bp1 {
         flex-basis: calc(100% / 5 * 3) !important;
     }
+
     .u-4-of-5-bp1 {
         flex-basis: calc(100% / 5 * 4) !important;
     }
+
     .u-1-of-6-bp1 {
         flex-basis: calc(100% / 6) !important;
     }
+
     .u-5-of-6-bp1 {
         flex-basis: calc(100% / 6 * 5) !important;
     }
@@ -622,33 +640,43 @@ a:focus {
     .u-1-of-2-bp2 {
         flex-basis: calc(100% / 2) !important;
     }
+
     .u-1-of-3-bp2 {
         flex-basis: calc(100% / 3) !important;
     }
+
     .u-2-of-3-bp2 {
         flex-basis: calc(100% / 3 * 2) !important;
     }
+
     .u-1-of-4-bp2 {
         flex-basis: calc(100% / 4) !important;
     }
+
     .u-3-of-4-bp2 {
         flex-basis: calc(100% / 4 * 3) !important;
     }
+
     .u-1-of-5-bp2 {
         flex-basis: calc(100% / 5) !important;
     }
+
     .u-2-of-5-bp2 {
         flex-basis: calc(100% / 5 * 2) !important;
     }
+
     .u-3-of-5-bp2 {
         flex-basis: calc(100% / 5 * 3) !important;
     }
+
     .u-4-of-5-bp2 {
         flex-basis: calc(100% / 5 * 4) !important;
     }
+
     .u-1-of-6-bp2 {
         flex-basis: calc(100% / 6) !important;
     }
+
     .u-5-of-6-bp2 {
         flex-basis: calc(100% / 6 * 5) !important;
     }
@@ -658,33 +686,43 @@ a:focus {
     .u-1-of-2-bp3 {
         flex-basis: calc(100% / 2) !important;
     }
+
     .u-1-of-3-bp3 {
         flex-basis: calc(100% / 3) !important;
     }
+
     .u-2-of-3-bp3 {
         flex-basis: calc(100% / 3 * 2) !important;
     }
+
     .u-1-of-4-bp3 {
         flex-basis: calc(100% / 4) !important;
     }
+
     .u-3-of-4-bp3 {
         flex-basis: calc(100% / 4 * 3) !important;
     }
+
     .u-1-of-5-bp3 {
         flex-basis: calc(100% / 5) !important;
     }
+
     .u-2-of-5-bp3 {
         flex-basis: calc(100% / 5 * 2) !important;
     }
+
     .u-3-of-5-bp3 {
         flex-basis: calc(100% / 5 * 3) !important;
     }
+
     .u-4-of-5-bp3 {
         flex-basis: calc(100% / 5 * 4) !important;
     }
+
     .u-1-of-6-bp3 {
         flex-basis: calc(100% / 6) !important;
     }
+
     .u-5-of-6-bp3 {
         flex-basis: calc(100% / 6 * 5) !important;
     }
@@ -694,33 +732,43 @@ a:focus {
     .u-1-of-2-bp4 {
         flex-basis: calc(100% / 2) !important;
     }
+
     .u-1-of-3-bp4 {
         flex-basis: calc(100% / 3) !important;
     }
+
     .u-2-of-3-bp4 {
         flex-basis: calc(100% / 3 * 2) !important;
     }
+
     .u-1-of-4-bp4 {
         flex-basis: calc(100% / 4) !important;
     }
+
     .u-3-of-4-bp4 {
         flex-basis: calc(100% / 4 * 3) !important;
     }
+
     .u-1-of-5-bp4 {
         flex-basis: calc(100% / 5) !important;
     }
+
     .u-2-of-5-bp4 {
         flex-basis: calc(100% / 5 * 2) !important;
     }
+
     .u-3-of-5-bp4 {
         flex-basis: calc(100% / 5 * 3) !important;
     }
+
     .u-4-of-5-bp4 {
         flex-basis: calc(100% / 5 * 4) !important;
     }
+
     .u-1-of-6-bp4 {
         flex-basis: calc(100% / 6) !important;
     }
+
     .u-5-of-6-bp4 {
         flex-basis: calc(100% / 6 * 5) !important;
     }
@@ -766,6 +814,7 @@ a:focus {
 */
 
 @media print {
+
     *,
     *:before,
     *:after {
@@ -776,16 +825,20 @@ a:focus {
         box-shadow: none !important;
         text-shadow: none !important;
     }
+
     a,
     a:visited {
         text-decoration: underline;
     }
+
     a[href]:after {
-        content: " (" attr(href) ")";
+        content: " ("attr(href) ")";
     }
+
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        content: " ("attr(title) ")";
     }
+
     /*
      * Don't show links that are fragment identifiers,
      * or use the `javascript:` pseudo protocol
@@ -794,14 +847,17 @@ a:focus {
     a[href^="javascript:"]:after {
         content: "";
     }
+
     pre {
         white-space: pre-wrap !important;
     }
+
     pre,
     blockquote {
         border: 1px solid #999;
         page-break-inside: avoid;
     }
+
     /*
      * Printing Tables:
      * http://css-discuss.incutio.com/wiki/Printing_Tables
@@ -809,16 +865,19 @@ a:focus {
     thead {
         display: table-header-group;
     }
+
     tr,
     img {
         page-break-inside: avoid;
     }
+
     p,
     h2,
     h3 {
         orphans: 3;
         widows: 3;
     }
+
     h2,
     h3 {
         page-break-after: avoid;
