--- a/css/screen.css
+++ b/css/screen.css
@@ -579,7 +579,6 @@ a:focus {
     line-height: 24px;
     font-weight: 400;
     padding: 4px 0;
-    transition: color .175s ease-in;
 }
 
 .c-link-cta,
@@ -588,7 +587,7 @@ a:focus {
     color: #7373F5;
 }
 
-.c-link-cta::before {
+.c-link-cta::after {
     content: "";
     display: block;
     position: absolute;
@@ -627,8 +626,50 @@ a:focus {
 
 .c-link-cta--inverse:hover::after {
     background-color: #fff;
-
 }
+
+/*
+    Component: footer
+    ---
+    Main footer of the website
+*/
+
+.c-footer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.c-footer__logo {
+}
+
+.c-footer__nav {
+    display: flex;
+    gap: 24px;
+}
+
+@media (min-width: 768px) {
+    .c-footer {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .c-footer__logo {}
+
+    .c-footer__nav {}
+}
+
+@media (min-width: 992px) {
+    .c-footer {
+        justify-content: space-between;
+    }
+
+    .c-footer__logo {}
+
+    .c-footer__logo .c-logo {}
+
+    .c-footer__nav {}
+}
+
 
 
 /*------------------------------------*\
